# cookiecutter-python-package

./: LICENSE  README.md  cookiecutter.json  logo.py  pyproject.toml
{{ cookiecutter.repo_name }}/: LICENSE  Makefile  noxfile.py  pyproject.toml
{{ cookiecutter.repo_name }}/.github/: ISSUE_TEMPLATE.md
{{ cookiecutter.repo_name }}/.github/workflows/: labeler.yml  release.yml  tests.yml
{{ cookiecutter.repo_name }}/docs/: _quarto.yml  contributing.qmd  index.ipynb
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.repo_name }}/: __init__.py  __main__.py
{{ cookiecutter.repo_name }}/tests/: test_foo.py
