[project]
name = "cookiecutter-python-package"
version = "0.0.1"
description = "A modern Python package cookiecutter."
authors = [{name="Arthur Turrell", email="{{cookiecutter.email}}"}]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "scipy>=1.15.2",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.1",
    "coverage[toml]>=7.6.9",
    "jupyter>=1.1.1",
    "nbstripout>=0.8.1",
    "nox>=2024.10.9",
    "pre-commit>=4.0.1",
    "pre-commit-hooks>=5.0.0",
    "pygments>=2.18.0",
    "pytest>=8.3.4",
    "quartodoc>=0.9.1",
    "ruff>=0.8.3",
    "toml>=0.10.2",
    "xdoctest[colors]>=1.2.0",
    "ipykernel>=6.29.5",
    "typeguard>=4.4.2",
    "ty>=0.0.14",
]


[tool.mypy]
strict = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
disallow_untyped_calls = false

[tool.pydoclint]
style = 'google'
exclude = ["noxfile.py", "tests/", "docs/"]
